cleaned up forms.py for blogs, added related name to user model, changed background-color and color of scrolltop button on hover for blog, added popover function for attn: recruiter message, added padding between paragraphs and added logic to only creator of blog have the ability to only edit and delete their own blog, added dynamic header text in blog views, add back profile pic and made adjustments to positioning in css, fix white space issue, add profile picture back in snippets/nav, updated wording and color to icons, included tech badges.

--- a/apps/blog/static/blog/css/style.css
+++ b/apps/blog/static/blog/css/style.css
@@ -168,8 +168,8 @@
     transition: all 0.5s ease-in-out;
 }
 .scroll-top-wrapper:hover {
-    background-color: darkgreen;
-    color: darkgoldenrod;
+    background-color: #6c757d;
+    color: white;
 }
 .scroll-top-wrapper.show {
     visibility:visible;
